# orcapod-python

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  DESIGN_ISSUES.md  README.md  RELEASING.md  TESTING_PLAN.md  TODO_ANALYSIS.md  codecov.yml  demo_caching.py  demo_pipeline.py  function-execution-improvements-plan.md  mkdocs.yml  orcapod-design.md  plan.md  pyproject.toml  pytest.ini  sample.py
.claude/hooks/: session-start.sh
.github/workflows/: _license-check.yml  docs.yml  publish.yml  run-objective-tests.yml  run-postgres-tests.yml  run-tests.yml  tests.yml
.zed/: rules
design/: async-execution-implementation-plan.md  async-execution-system.md
docs/: CNAME  CONTRIBUTING_DOCS.md  conftest.py  getting-started.md  index.md
docs/api/: configuration.md  databases.md  datagrams.md  errors.md  function-pods.md  index.md  nodes.md  operators.md  packet-functions.md  pipeline.md  sources.md  streams.md  types.md
docs/concepts/: architecture.md  datagrams.md  function-pods.md  identity.md  operators.md  provenance.md  schema.md  sources.md  streams.md
docs/design/: 2026-03-27-non-active-node-semantics-design.md
docs/getting-started/: first-pipeline.md  installation.md  quickstart.md
docs/plans/: 2026-03-26-postgresql-table-source.md  2026-03-27-non-active-node-semantics.md
docs/specs/: 2026-03-26-postgresql-table-source-design.md
docs/user-guide/: caching.md  execution.md  function-pods.md  operators.md  pipelines.md  sources.md
examples/: async_vs_sync_pipeline.py  save_and_load_pipelines.py
notebooks/tutorials/: 01_introduction_to_orcapod.ipynb
src/: sample.py
src/orcapod/: __init__.py  channels.py  errors.py  system_constants.py  types.py
superpowers/plans/: 2026-03-14-node-authority-plan.md  2026-03-14-remove-populate-cache-plan.md  2026-03-14-sync-orchestrator-plan.md  2026-03-15-async-orchestrator-refactor-plan.md  2026-03-15-packet-function-proxy-plan.md  2026-03-21-db-connector-plan.md  2026-03-23-sqlite-connector.md  2026-03-25-spiraldb-connector.md  2026-03-28-normalized-pipeline-save-format.md  2026-04-01-database-path-contextualization.md  2026-04-02-schema-arrow-equality.md  2026-04-07-eng374-execution-context-schema.md  2026-04-08-release-pipeline.md
superpowers/specs/: 2026-03-14-node-authority-design.md  2026-03-14-remove-populate-cache-design.md  2026-03-14-sync-orchestrator-design.md  2026-03-15-async-orchestrator-refactor-design.md  2026-03-15-stub-packet-function-design.md  2026-03-21-db-connector-design.md  2026-03-23-sqlite-connector-design.md  2026-03-25-postgresql-connector-design.md  2026-03-25-spiraldb-connector-design.md  2026-03-25-spiraldb-exploration.md  2026-03-28-pipeline-save-format-design.md  2026-04-01-database-path-contextualization-design.md  2026-04-02-schema-arrow-equality-design.md  2026-04-07-execution-context-schema-design.md  2026-04-08-release-pipeline-design.md
test-objective/: conftest.py
test-objective/integration/: test_caching_flows.py  test_column_config_filtering.py  test_hash_invariants.py  test_pipeline_flows.py  test_provenance.py
test-objective/property/: test_hash_properties.py  test_operator_algebra.py  test_schema_properties.py
test-objective/unit/: test_arrow_data_utils.py  test_arrow_utils.py  test_contexts.py  test_databases.py  test_datagram.py  test_function_pod.py  test_hashing.py  test_lazy_module.py  test_nodes.py  test_operators.py  test_packet.py  test_packet_function.py  test_schema_utils.py  test_semantic_types.py  test_source_registry.py  test_sources.py  test_stream.py  test_tag.py  test_tracker.py  test_types.py
tests/: conftest.py
tests/test_channels/: test_async_execute.py  test_channels.py  test_copilot_review_issues.py  test_native_async_operators.py  test_node_async_execute.py  test_pipeline_async_integration.py  test_pipeline_example.py
tests/test_core/: conftest.py  test_cached_packet_function.py  test_caching_integration.py  test_function_pod.py  test_function_pod_extended.py  test_packet_function.py  test_regression_fixes.py  test_result_cache.py  test_streams.py  test_table_scope.py  test_tracker.py
(+311 files in other folders)
