[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "orcapod"
description = "Intuitive and powerful library for highly reproducible scientific data pipeline"
dynamic = ["version"]
dependencies = [
    "xxhash",
    "networkx",
    "typing_extensions",
    "matplotlib>=3.10.3",
    "pandas>=2.2.3",
    "pyyaml>=6.0.2",
    "pyarrow>=20.0.0",
    "polars>=1.31.0",
    "beartype>=0.21.0",
    "deltalake>=1.0.2",
    "graphviz>=0.21",
    "gitpython>=3.1.45",
    "universal-pathlib>=0.3.8",
    "starfix>=0.2.0",
    "pygraphviz>=1.14",
    "tzdata>=2024.1",
    "uuid-utils>=0.11.1",
    "s3fs>=2025.12.0",
    "pymongo>=4.15.5",
    "basedpyright>=1.38.1",
]
readme = "README.md"
requires-python = ">=3.11.0"
license = { text = "MIT License" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/nauticalab/orcapod-python"

[project.optional-dependencies]
redis = ["redis>=6.2.0"]
ray = ["ray[default]==2.48.0", "ipywidgets>=8.1.7"]
postgresql = ["psycopg[binary]>=3.0"]
spiraldb = [
    "pyspiral>=0.11.0",
]
all = ["orcapod[redis]", "orcapod[ray]", "orcapod[postgresql]", "orcapod[spiraldb]"]


[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/orcapod/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/orcapod"]


[dependency-groups]
dev = [
    "httpie>=3.2.4",
    "hypothesis>=6.0",
    "hydra-core>=1.3.2",
    "imageio>=2.37.0",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.7",
    "jsonschema>=4.25.0",
    "minio>=7.2.16",
    "pre-commit>=4.4.0",
    "pre-commit-hooks>=6.0.0",
    "pyarrow-stubs>=20.0.0.20250716",
    "pyiceberg>=0.9.1",
    "pyright>=1.1.404",
    "pytest>=8.3.5",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=6.1.1",
    "psycopg[binary]>=3.0",
    "ray[default]==2.48.0",
    "redis>=6.2.0",
    "ruff>=0.14.4",
    "testcontainers[minio]>=4.0.0",
    "pip-licenses>=5.0.0",
    "tqdm>=4.67.1",
    "mkdocs-material>=9.7.5",
    "mkdocstrings[python]>=1.0.3",
]
